--- a/form-app/src/app/globals.css
+++ b/form-app/src/app/globals.css
@@ -2,20 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --text: #171717;
+  --white: #FFF;
+  --blackButton-color: #202124;
+  --red-color: #E14942;
+  --greyText-color: #8E8E8E;
+  --grey-color: #7F7F800D
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #F4F4F4 --text: #ededed;
   }
 }
 
 body {
-  color: var(--foreground);
+  color: var(--text);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
+  position: relative;
+  height: 100vh;
 }
